--- a/Vleko.DAL/Vleko.DAL.csproj
+++ b/Vleko.DAL/Vleko.DAL.csproj
@@ -1,22 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Authors>Vleko</Authors>
 		<Company>Media Indo Teknologi</Company>
 		<Description>Data Action Layer for Dynamic Provider</Description>
 		<Copyright>Copyright 2022</Copyright>
-		<PackageProjectUrl>https://github.com/MediaIndoTeknologi/Vleko.DAL</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/MediaIndoTeknologi/Vleko.DAL</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/Vleko.DAL</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/Vleko.DAL</RepositoryUrl>
 		<PackageTags>DataAccessLayer DAL</PackageTags>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<RepositoryType>git</RepositoryType>
 		<PlatformTarget>AnyCPU</PlatformTarget>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<AssemblyVersion></AssemblyVersion>
+		<AssemblyVersion>1.0.0.2</AssemblyVersion>
+		<FileVersion></FileVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -25,9 +26,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Dapper" Version="2.0.123" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.14" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.14" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.8" />
 	</ItemGroup>
 
 </Project>
