--- a/Example/Vleko.Example.API/Vleko.Example.API.csproj
+++ b/Example/Vleko.Example.API/Vleko.Example.API.csproj
@@ -7,6 +7,7 @@
 	<ItemGroup>
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
+		<PackageReference Include="Vlekops.Result" Version="1.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
